// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkWithEncodedLiteratureQuery renders the component with special characters 1`] = `
<Link
  replace={false}
  to="/literature?q=this%20is%20an%20encoded%20query%20%2C%20%2F%20%3F%20%3A%20%40%20%26%20%3D%20%2B%20%24%20%23"
>
  this is an encoded query , / ? : @ & = + $ #
</Link>
`;

exports[`LinkWithEncodedLiteratureQuery renders the component without special characters 1`] = `
<Link
  replace={false}
  to="/literature?q=this%20is%20a%20query"
>
  this is a query
</Link>
`;
